product controller done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/projetintegration?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/Ecommerce?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.driver=com.mysql.jdbc.driver
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
+
